--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "url": "https://github.com/prometheusresearch/react-forms/issues"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.7 || ^15.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
